<resources>
    <string name="app_name">Seroean</string>
    <string name="onboarding1">Onboarding 1</string>
    <string name="onboarding2">Onboarding 2</string>
    <string name="onboarding3">Onboarding 3</string>
    <string name="onboardingtext1">Eksplorasi Budaya</string>
    <string name="onboardingtext2">Rekomendasi Wisata</string>
    <string name="onboardingtext3">Komunitas &amp; Interaksi</string>
    <string name="onboardingsubtext1">"Jelajahi cerita, tradisi, dan warisan budaya yang kaya akan makna"</string>
    <string name="onboardingsubtext2">"Temukan destinasi budaya dan alam terbaik yang tak terlupakan"</string>
    <string name="onboardingsubtext3">"Gabung dengan komunitas, berbagi pengalaman, dan hidupkan kembali budaya"</string>
    <string name="ERROR_LOAD_IMAGES">Gagal memuat gambar, Silahkan coba lagi.</string>
    <string name="BIODATA_UPLOAD_SUCCESS">Biodata berhasil diunggah.</string>
    <string name="ERROR_UPLOAD_DATA">Gagal mengunggah data, Silahkan coba lagi.</string>
    <string name="ERROR_COMPRESSING_DATA">Terjadi kesalahan saat mengompresi data, Silahkan coba lagi.</string>
    <string name="ERROR_IMAGE_EMPTY">Tidak ada gambar yang dipilih, Silakan unggah gambar.</string>
    <string name="whatsapp_number">6281225635570</string>
    <string name="whatsapp_message">Halo, saya ingin bertanya tentang</string>
    <string name="NotifikasiContent">🔥 Kabar Terbaru! Cek Sekarang!</string>
    <string name="NotifikasiTitle">Notifikasi Seroean</string>
    <string name="halo">Halo,</string>
    <string name="otp">OTP</string>
    <string name="sharing">Bagikan wisata ini ke…</string>
    <string name="UNAUTHORIZED">Unauthorized</string>
    <string name="ERROR_UNAUTHORIZED">Akses Ditolak! Akun Anda belum diverifikasi.</string>
    <string name="verifikasiotp">Verifikasi OTP</string>
    <string name="lanjutkan">Silahkan Login dengan akun yang sudah dibuat sebelumnya.</string>
    <string name="resend_in">Mohon tunggu %d detik untuk Kirim Ulang Kode OTP</string>
    <string name="INFO_EMAIL_ALREADY_REGISTERED">Email sudah terdaftar</string>
    <string name="INFO_CONTINUE_OTP">Silakan lanjutkan ke verifikasi OTP.</string>
    <string name="RESEND_OTP_NOW">Kirim ulang OTP</string>
    <string name="FAILED_INFO_REQUEST_OTP">Gagal Mengirim OTP</string>
    <string name="SUCCESS_INFO_REQUEST_OTP">Berhasil Mengirim OTP</string>
    <string name="FAILED_INFO_VERIFY_OTP">Gagal Verifikasi OTP</string>
    <string name="SUCCESS_INFO_VERIFY_OTP">Berhasil Verifikasi OTP</string>
    <string name="ERROR_OTP_EMPTY">Kode OTP tidak boleh kosong</string>
    <string name="FAILED_INFO_FORGOT_PASS">Reset Kata Sandi Gagal</string>
    <string name="SUCCESS_INFO_FORGOT_PASS">Reset Kata Sandi Berhasil</string>
    <string name="msgReset">"Token reset kata sandi telah dikirim ke email."</string>
    <string name="errorGoogle">Login dibatalkan, Silahkan coba lagi.</string>
    <string name="failedGoogle">Terjadi kesalahan saat mencoba masuk.</string>
    <string name="loginGoogle">Error Login Google</string>
    <string name="loginSuccess">Login Berhasil</string>
    <string name="loginFailed">Login Gagal</string>
    <string name="regisSuccess">Daftar Berhasil</string>
    <string name="regisFailed">Daftar Gagal</string>
    <string name="Berikutnya">Berikutnya</string>
    <string name="home">Beranda</string>
    <string name="budaya">Budaya</string>
    <string name="profile">Pengguna</string>
    <string name="maps">Peta</string>
    <string name="notfoundmaps">Lokasi Tidak Ditemukan</string>
    <string name="wisata">Wisata</string>
    <string name="kuliner">Kuliner</string>
    <string name="sejarah">Sejarah</string>
    <string name="tentang">Tentang</string>
    <string name="provinsi">Provinsi</string>
    <string name="Pencarian">Pencarian Teratas</string>
    <string name="txtFoto">Foto - Foto Disini</string>
    <string name="txtSubFoto">Beberapa Foto yang Bisa Kamu Lihat</string>
    <string name="Notifikasi">Notifikasi</string>
    <string name="Dashboard">Background Dashboard</string>
    <string name="Welcometxt">Halo, Louis Michael</string>
    <string name="Welcome_subtxt">Jelajahi Keragaman Budaya dan Wisata</string>
    <string name="search_hint">Temukan Keragaman yang Menarik di Sekitarmu</string>
    <string name="search_hint_maps">Temukan Wisata dan Kuliner yang Ada di Sekitarmu</string>
    <string name="search_hint_questions">Cari di pertanyaan umum…</string>
    <string name="ic_arrow_right">Slide Ke Kanan Untuk Lanjut</string>
    <string name="skip">Skip</string>
    <string name="atau">atau</string>
    <string name="kembali">Kembali</string>
    <string name="memuat">Memuat…</string>
    <string name="move">Lanjut</string>
    <string name="rating">4.5</string>
    <string name="share">Bagikan</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_name">Andri</string>
    <string name="user_email">Andriking23@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="disukai">Disukai</string>
    <string name="exit">Keluar</string>
    <string name="lokasi_image">Lokasi Gambar</string>
    <string name="subquestions">Pertanyaan ini sering Sobat Seroean\ntanyakan, Kamu bisa cari disini ya.</string>
    <string name="general_questions">Pertanyaan Umum</string>
    <string name="questions">Bagaimana saya mengubah atau mereset kata sandi?</string>
    <string name="about_us">Tentang Kami</string>
    <string name="alamat">P8MG+6G, Kurau, Kec. Koba, Kabupaten Bangka Tengah, Kepulauan Bangka Belitung</string>
    <string name="provinsitxt">Kepulauan Bangka Belitung</string>
    <string name="lainnya">Lainnya</string>
    <string name="noTelp">Nomor Telepon</string>
    <string name="versi">Versi 1.0.1</string>
    <string name="tipe">Akun</string>
    <string name="tentangkami">Tentang Kami</string>
    <string name="tentangSeroean">Seroean adalah aplikasi yang menghubungkan teknologi dengan budaya untuk melestarikan warisan lokal dan memperkuat kebersamaan sosial. Melalui fitur rekomendasi wisata dan budaya, kami membantu pengguna menemukan dan mengenal tradisi, seni, serta destinasi khas dari berbagai daerah.</string>
    <string name="ketawai">Pulau Ketawai</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="sejarahbabel">Sejarah Bumi Serumpun Sebalai</string>
    <string name="txtDeskripsi"><![CDATA[
    Pulau Ketawai adalah salah satu pulau kecil kebanggaan masyarakat Bangka Tengah.
    Pulau ini merupakan objek wisata yang berada di Kabupaten Bangka Tengah dan menjadi
    salah satu destinasi menarik yang banyak dikunjungi wisatawan, baik dari Bangka Tengah
    sendiri maupun dari luar daerah.\n\nPerjalanan menuju Pulau Ketawai dapat ditempuh dengan rute berikut:\n

    1. Dari Bandara Depati Amir, pengunjung dapat menggunakan transportasi darat berupa taksi
       atau transportasi umum menuju Desa Kurau. Perjalanan ini memakan waktu sekitar 30 menit
       dengan jarak tempuh sekitar 35 km. Biaya transportasi umum sekitar Rp20.000 (dua puluh ribu rupiah).\n\n

    2. Dari Desa Kurau, pengunjung dapat menyewa perahu milik nelayan setempat untuk mencapai Pulau Ketawai.
       Biaya sewa perahu bervariasi tergantung hasil negosiasi dengan pemilik perahu. Perjalanan dari Desa
       Kurau ke Pulau Ketawai memakan waktu sekitar 1 jam.

    Disarankan untuk menyewa perahu secara rombongan agar dapat menekan biaya sewa seminimal mungkin.
]]></string>
    <string name="txtdeskripsisejarah">Pelan tapi pasti, Bangka Belitung terus bersolek. Kecantikannya tak hanya dirasakan penduduk lokal. Secara nasional, termasuk dunia, juga turut merasakan pesonanya. Ini jelas kebanggaan, juga prestasi, mengingat Bangka Belitung merupakan provinsi baru, terbentuk pada tahun 2000. Provinsi Kepulauan Bangka Belitung terdiri dari dua pulau besar, yakni Pulau Bangka dan Pulau Belitung. Ada juga pulau-pulau kecil lainnya. Di zaman kerajaan, wilayah ini masuk dalam kekuasaan Sriwijaya,
        Majahapit, juga Mataram Setelahnya, Bangka Belitung menjadi daerah jajahan Inggris. Pada 10 Desember 1816, dilaksanakan serah terima kepada pemerintah Belanda, berlangsung di Muntok.
\n\nPada masa penjajahan Belanda, terjadi perlawanan, dilakukan oleh Depati Barin. Perlawanan kemudian dilanjutkan putranya, Depati Amir, hingga berakhir dengan pengasingan ke Kupang, Nusa Tenggara Timur. Selama masa penjajahan, banyak kekayaan di pulau ini dirampas. Kendati demikian, Bangka Belitung mampu bertahan, termasuk melakukan sejumlah perlawanan. Baru pada tahun 2000, Bumi Serumpun Sebalai resmi menjadi wilayah otonom.
Ketika itu, Pemerintah Republik Indonesia mengakui keberadaan Bangka Belitung sebagai provinsi, tak lagi menginduk bersama Sumatera Selatan. Penetapan ini dikukuhkan berdasarkan Undang-Undang Nomor 27 Tahun 2000.</string>
    <string name="nomorhp">083164972776</string>
    <string name="datetime">02 Maret 2025, 11.30 WIB</string>
    <string name="rating_star">Rating</string>
    <string name="namauser">Louis Michael</string>
    <string name="komentaruser">Saya berharap bisa datang ke tempat ini lagi</string>
    <string name="welcome">Selamat Datang</string>
    <string name="txt_welcome">Selamat Datang di Seroean</string>
    <string name="txt_subwelcome">Jelajahi keindahan alam dan budaya dalam satu genggamanmu, semua bisa dieksplorasi di aplikasi!</string>
    <string name="LOGIN_TEXT">Masuk</string>
    <string name="REGISTER_TEXT">Daftar</string>
    <string name="LOKASI">Alamat</string>
</resources>