<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    android:elevation="4dp"
    android:layout_gravity="center"
    android:backgroundTint="@color/white"
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivLocationImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/lokasi_image"
            android:src="@drawable/ic_ketawai" />

        <RelativeLayout
            android:id="@+id/rltest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/tvNama"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginEnd="200dp"
                android:fontFamily="@font/helveticabold"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:textStyle="bold"
                android:text="@string/ketawai" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap,RtlHardcoded,UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iconStar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/rating_star"
                    android:src="@drawable/ic_star"
                    tools:ignore="VisualLintBounds,ImageContrastCheck" />

                <TextView
                    android:id="@+id/tvRatingCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/rating"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintBounds" />
            </LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/lnItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rltest"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/tvTentang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/helveticabold"
                android:text="@string/tentang"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSubTentang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/helveticabold"
                android:textStyle="bold"
                android:text="@string/LOKASI"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica"
                android:text="@string/alamat"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvSubProvinsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/helveticabold"
                android:textStyle="bold"
                android:text="@string/provinsi"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvSubProvinsitxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica"
                android:text="@string/provinsitxt"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
