<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.screens.ThirdScreen">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_button_background"
        android:backgroundTint="@color/white"
        android:elevation="12dp"
        android:fontFamily="@font/helvetica"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/skip"
        android:textColor="@color/whitelight"
        android:textSize="16sp"
        android:translationZ="2dp"
        android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="180dp"
        android:src="@drawable/ic_onboarding3"
        android:contentDescription="@string/onboarding3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/LinearView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboardingtext3"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="@font/helvetica" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:text="@string/onboardingsubtext3"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivNextFinish"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/ic_arrow_right"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearView"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
