<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:animateLayoutChanges="true"
    android:padding="20dp"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/welcomeimage"
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_welcome" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/txt_welcome"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/welcomeimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtSubWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/helvetica"
        android:text="@string/txt_subwelcome"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Daftar"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:elevation="0dp"
        android:translationZ="0dp"
        android:backgroundTint="@color/primary"
        android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
        android:gravity="center"
        android:text="@string/REGISTER_TEXT"
        android:textAllCaps="false"
        android:fontFamily="@font/helveticabold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtSubWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/Masuk"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/whitelighten"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:translationZ="0dp"
        android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
        android:fontFamily="@font/helveticabold"
        android:gravity="center"
        android:text="@string/LOGIN_TEXT"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/Daftar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>
